layout issues fix

--- a/src/styles/components/content/_card.scss
+++ b/src/styles/components/content/_card.scss
@@ -41,8 +41,8 @@
 }
 
 img {
-  min-height: 28rem;
-  max-height: 28rem;
+  min-height: 27rem;
+  max-height: 27rem;
   max-width: 100%;
   vertical-align: middle;
   filter: contrast(100%);
@@ -66,10 +66,10 @@ img {
 }
 
 .card {
-  height: 40rem;
+  height: 37rem;
   width:30rem;
   background-color:white;
-  border-radius: 0.25rem;
+  border-radius: 0.50rem;
   box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
   display: flex;
   flex-direction: column;
@@ -87,23 +87,26 @@ img {
   // flex: 1 1 auto;
   flex-direction: column;
   padding: 1rem;
-  height: 10rem;
+  height: 8rem;
 }
 
 .card__title {
   margin-right: auto;
   color: gray;
   width:22rem;
-  max-height: 4rem;
-  // min-height: 4rem;
   font-size: 1.5rem;
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
-  overflow:scroll;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  // background-color: red;
 }
 .likeView{
   display: flex;
+  max-height: 3rem;
+  min-height: 3rem;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -111,20 +114,29 @@ img {
 .like{
   margin-left: 0.3rem;
   margin-right: 0.3rem;
-  min-height: 2rem;
-  height: 2rem;
-  width: 2rem;
+  min-height: 1.7rem;
+  height: 1.7rem;
+  width: 1.9rem;
 }
 .likenum{
   font-size: 1.5rem;
   color: gray
 }
 .card__text {
-  // flex: 1 1 auto;
-  min-height: 5.5rem;
+  min-height: 4.8rem;
+  max-height: 4.8rem;
   font-size: 1rem;
   line-height: 1.5;
-  // margin-bottom: 1rem;
-  overflow: scroll;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
   // background-color: red;
 }
+
+// @media screen and (max-width: 450px) {
+//   .card{
+//     height: 40rem;
+//     width: 90vw;
+//   }
+// }
