--- a/src/styles/components/content/_content.scss
+++ b/src/styles/components/content/_content.scss
@@ -80,3 +80,28 @@
     }
 
   }
+  @media screen and (orientation:landscape) and (max-height: 500px) {
+    .imgHeaderLink{
+        min-height: 2rem;
+        height: 2rem;
+        margin: 1rem;
+    }
+    .title{
+        font-size: 0.5rem;
+    }
+    .modelText{
+        font-size: 0.5rem;
+    }
+    .imgLink{
+        min-height: 2rem;
+        height: 2rem;
+        margin: 1rem;
+    }
+    .close{
+        height: 1rem;
+        margin-left: 99%;
+        margin-top: 0rem;
+        color: #B61B33;
+        margin-right: 1rem;
+    }
+ }
