--- a/src/styles/components/content/_recipes.scss
+++ b/src/styles/components/content/_recipes.scss
@@ -1,6 +1,6 @@
-.recipes-container {
-    height : 100vh;
-}
+// .recipes-container {
+    // height : 100vh;
+// }
 
 .recipesinner-container {
     background-color:$white;
