--- a/src/styles/components/home/_home.scss
+++ b/src/styles/components/home/_home.scss
@@ -5,7 +5,7 @@
     background-size: cover;
     background-position: center;
     margin: 0rem;
-    filter: contrast(100%);
+    filter: contrast(90%);
     &:hover {  
           filter: contrast(110%);
       }
