--- a/src/styles/components/home/_title.scss
+++ b/src/styles/components/home/_title.scss
@@ -1,12 +1,14 @@
 .title-container {
-    // font-size: $title-font;
-    font-size: 3vw;
+    // font-size: 3vw;
+    font-size: 9rem;
+    font-family: 'Tangerine', cursive;
+    font-style: oblique;
     height : 15vh; 
     display: flex;
     justify-content: center;
     align-items : center;
     color: $white;
-    text-decoration: underline;
+    // text-decoration: underline;
     text-shadow: 2px 2px 5px #B61B33;
     background-size: contain;
     flex-direction: column;
@@ -14,12 +16,12 @@
 
 @media screen and (max-width: 800px) {
     .title-container {
-      font-size: 4vw;
+      font-size: 7rem;
     }
   }
 
   @media screen and (max-width: 600px) {
     .title-container {
-      font-size: 6vw;
+      font-size: 5rem;
     }
   }
